--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react-hooks/exhaustive-deps": "off",
+      "no-useless-escape": "off"
+    }
   },
   "browserslist": {
     "production": [
